loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: value to4 is not a member of Int
  for (i<-1 to4 ) {
            ^